--- a/ClientApp/src/app/components/game-picker/game-picker.component.html
+++ b/ClientApp/src/app/components/game-picker/game-picker.component.html
@@ -1,17 +1,7 @@
 <div class="card-container" *ngFor="let game of schedule">
   <div class="game-card">
     <div class="game-row">
-      <div>
-        <div>{{game.awayTeam}}</div>
-        <div class="block-center">{{game.awaySpread}}</div>
-        <input class="block-center" type="checkbox" (change)="onChange($event)"/>
-      </div>
-      <div class="big-font">@</div>
-      <div>
-        <div>{{game.homeTeam}}</div>
-        <div class="block-center">{{game.homeSpread}}</div>
-        <input class="block-center" type="checkbox" />
-      </div>
+      <app-game-picker-control [game]="game"></app-game-picker-control>
     </div>
     <div class="game-row">{{game.startDate}}</div>
     <div class="game-row">{{game.startTime}}</div>
