--- a/ClientApp/src/app/components/change-picks/change-picks.component.html
+++ b/ClientApp/src/app/components/change-picks/change-picks.component.html
@@ -1,10 +1,7 @@
 <div class="container">
   <app-game-picker></app-game-picker>
-  <div>Pick 1: {{form.get("pick1").value}}</div>
-  <div>Pick 2: {{form.get("pick2").value}}</div>
-  <div>Pick 3: {{form.get("pick3").value}}</div>
-  <div>Pick 4: {{form.get("pick4").value}}</div>
-  <div>Pick 5: {{form.get("pick5").value}}</div>
-
+  <ng-container *ngFor="let pick of getCurrentPicks$() | async; let i = index">
+    <div>Pick {{i + 1}}: {{pick.team}} <span *ngIf="pick.spread > 0">+</span>{{pick.spread}}</div>
+  </ng-container>
 </div>
 
