--- a/ClientApp/src/app/components/game-picker-control/game-picker-control.component.css
+++ b/ClientApp/src/app/components/game-picker-control/game-picker-control.component.css
@@ -1,3 +1,25 @@
+.game-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.game-card {
+    display: block;
+    width: 10rem;
+    margin: 1rem;
+    padding: 0.5rem;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: 0.1rem 0.1rem grey;
+}
+
+.big-font {
+  font-size: 2em;
+}
+
 .block-center {
   text-align: center;
 }
+
