moved picks display to top of page

--- a/ClientApp/src/app/components/change-picks/change-picks.component.html
+++ b/ClientApp/src/app/components/change-picks/change-picks.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-  <app-game-picker></app-game-picker>
-  <app-current-picks-display></app-current-picks-display>
+<div>
+  <div>
+    <app-current-picks-display></app-current-picks-display>
+  </div>
+  <div>
+    <app-game-picker></app-game-picker>
+  </div>
 </div>
 
