create team select interfaces

--- a/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
+++ b/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
@@ -6,7 +6,7 @@
       </ng-container>
     </div>
   </ng-container>
-  <ng-template #notSelected>Not Selected</ng-template>
+  <ng-template #notSelected>N/A</ng-template>
 </div>
 
 
