set nav bar to fixed top

--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
-<header>
+<header id="header">
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
+    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 navbar-fixed-top"
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">supercontestV2</a>
