--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.css
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.css
@@ -16,3 +16,12 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+#header {
+  top: 0px;
+  position: sticky;
+  z-index: 10;
+}
+
+
+
