--- a/ClientApp/src/app/components/game-picker-control/game-picker-control.component.html
+++ b/ClientApp/src/app/components/game-picker-control/game-picker-control.component.html
@@ -1,6 +1,6 @@
 <div class="game-card">
   <div class="game-row">
-    <div class="block-center" [ngClass]="{disabled: isHomeSelected, selected: isAwaySelected}">
+    <div class="block-center" [ngClass]="{disabled: isAwayDisabled, selected: isAwaySelected}">
       <app-logo-image [team]="game.awayTeam"></app-logo-image>
       <div>{{game.awayTeam}}</div>
       <div><span *ngIf="game.awaySpread > 0">+</span>{{game.awaySpread}}</div>
@@ -8,10 +8,10 @@
         type="checkbox"
         (change)="onChange($event, game.awayTeam, game.awaySpread)"
         [checked]="isAwaySelected"
-        [disabled]="isHomeSelected"/>
+        [disabled]="isAwayDisabled"/>
     </div>
     <div class="big-font">@</div>
-    <div class="block-center" [ngClass]="{disabled: isAwaySelected, selected: isHomeSelected}">
+    <div class="block-center" [ngClass]="{disabled: isHomeDisabled, selected: isHomeSelected}">
       <app-logo-image [team]="game.homeTeam"></app-logo-image>
       <div>{{game.homeTeam}}</div>
       <div><span *ngIf="game.homeSpread > 0">+</span>{{game.homeSpread}}</div>
@@ -19,7 +19,7 @@
         type="checkbox"
         (change)="onChange($event, game.homeTeam, game.homeSpread)"
         [checked]="isHomeSelected"
-        [disabled]="isAwaySelected"/>
+        [disabled]="isHomeDisabled"/>
     </div>
   </div>
   <div class="game-row">{{game.startDate}}</div>
