added submit picks button

--- a/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
+++ b/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
@@ -8,5 +8,9 @@
   </ng-container>
   <ng-template #notSelected>N/A</ng-template>
 </div>
+<div id="button-container">
+  <button (click)="savePicks()">Update Picks</button>
+</div>
+
 
 
