--- a/ClientApp/src/app/components/current-picks-display/current-picks-display.component.css
+++ b/ClientApp/src/app/components/current-picks-display/current-picks-display.component.css
@@ -1,3 +1,14 @@
+#button-container {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  background-color: lightblue;
+  border-radius: 4px;
+}
+
 .picks-container {
   padding: 1em;
   border: 2px solid blue;
