added clock component

--- a/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
+++ b/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
@@ -8,6 +8,9 @@
   </ng-container>
   <ng-template #notSelected>N/A</ng-template>
 </div>
+<div style="text-align: center;">
+  <app-date-clock></app-date-clock>
+</div>
 <div id="button-container">
   <button (click)="savePicks()">Update Picks</button>
 </div>
