added spreads to user pick model

--- a/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
+++ b/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
@@ -1,7 +1,7 @@
 <div class="picks-container">
   <ng-container  *ngFor="let pick of picks; let i = index">
     <div>Pick {{i + 1}}:
-      <ng-container *ngIf="picks[i]; else notSelected">
+      <ng-container *ngIf="picks[i].team; else notSelected">
         {{picks[i].team}} <span *ngIf="picks[i].spread > 0">+</span>{{picks[i].spread}}
       </ng-container>
     </div>
