initial schedule table implementation.  Bulk put still working funny

--- a/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
+++ b/ClientApp/src/app/components/current-picks-display/current-picks-display.component.html
@@ -13,6 +13,7 @@
 </div>
 <div id="button-container">
   <button (click)="savePicks()">Update Picks</button>
+  <button (click)="loadSchedule()">Load Schedule</button>
 </div>
 
 
