--- a/ClientApp/src/app/components/game-picker-control/game-picker-control.component.html
+++ b/ClientApp/src/app/components/game-picker-control/game-picker-control.component.html
@@ -22,6 +22,6 @@
         [disabled]="isHomeDisabled"/>
     </div>
   </div>
-  <div class="game-row">{{game.startDate}}</div>
-  <div class="game-row">{{game.startTime}}</div>
+  <div class="game-row">{{startDate}}</div>
+  <div class="game-row">{{startTime}}</div>
 </div>
