fixed styling to avoid weird scrolling

--- a/ClientApp/src/app/components/change-picks/change-picks.component.html
+++ b/ClientApp/src/app/components/change-picks/change-picks.component.html
@@ -2,7 +2,7 @@
   <div>
     <app-current-picks-display></app-current-picks-display>
   </div>
-  <div>
+  <div class="scrollable">
     <app-game-picker></app-game-picker>
   </div>
 </div>
