--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -29,7 +29,7 @@
             <a class="nav-link text-dark" [routerLink]="['/change-picks']">Picks</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
+            <a class="nav-link text-dark" [routerLink]="['/admin']">Admin</a>
           </li>
         </ul>
         <app-login-menu></app-login-menu>
