added route guard and logic to hide admin link

--- a/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -28,7 +28,7 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/change-picks']">Picks</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
+          <li *ngIf="isAdmin$ | async" class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/admin']">Admin</a>
           </li>
         </ul>
